--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Welsome to Sunny's home page
+description: Feel free to bookmark this to keep and eye on my project updates
